# pipeline_monitor

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  uwsgi.ini  uwsgi_file.ini  uwsgi_module.ini
.github/workflows/: main.yml
pipeline_monitor/: app.py  client.py  commands.py  fetch.py  metrics.py  ssh.py  status.py  tasks.py
pipeline_monitor/config/: ssh_config.yml
pipeline_monitor/ref_config/: prometheus.yml
