[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pipeline_monitor"
readme = "README.md"
version = "1.0.0"
description = ""
requires-python = ">=3.9"
dependencies = [
    'APScheduler==3.9.1',
    'Flask==2.1.2',
    'paramiko==2.11.0',
    'prometheus-client==0.14.1',
    'PyYAML==6.0',
    'tzlocal==4.2',
    'uWSGI==2.0.20'
]

[project.urls]
"Homepage" = "https://github.com/chime-experiment/pipeline_monitor"

# [tools.setuptools.packages.find]
# where = ["pipeline-monitor/config"]

# [tools.setuptools.package-data]
# config_data = ["ssh_config.yaml"]