[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pipeline_monitor"
readme = "README.md"
version = "1.0.0"
description = ""
requires-python = ">=3.9"
dependencies = [
    'APScheduler==3.9.1',
    'Werkzeug==2.2.2',
    'Flask==2.2.2',
    'prometheus-client==0.14.1',
    'PyYAML==6.0',
    'tzlocal==4.2',
    'uWSGI==2.0.20',
    'toml'
]

[project.urls]
"Homepage" = "https://github.com/chime-experiment/pipeline_monitor"
